--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Github List</string>
+    <string name="daily_reminder_on">Reminder On</string>
+    <string name="daily_reminder_off">Reminder Off</string>
+    <string name="we_miss_you">We Miss You</string>
+    <string name="settings">Settings</string>
+    <string name="favourite">Favourite</string>
 </resources>
